# offlinebooks

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  build.ninja  configure  requirements.txt  setup.cfg
.reuse/templates/: template_AGPL-3.0-or-later.jinja2  template_CC-BY-SA-4.0.jinja2  template_CC0-1.0.jinja2
galagos/: build.ninja  copy.bara.sky
galagos/local/: settings.bara.sky
offlinebooks/: main.py
