# SPDX-FileCopyrightText: 2021 Ian2020, et. al. <https://github.com/Ian2020>
#
# SPDX-License-Identifier: CC-BY-SA-4.0
#
# Keep your accounts offline
#
# For full copyright information see the AUTHORS file at the top-level
# directory of this distribution or at
# [AUTHORS](https://github.com/Ian2020/offlinebooks/AUTHORS.md)
#
# This work is licensed under the Creative Commons Attribution 4.0 International
# License. You should have received a copy of the license along with this work.
# If not, visit http://creativecommons.org/licenses/by/4.0/ or send a letter to
# Creative Commons, PO Box 1866, Mountain View, CA 94042, USA.

[metadata]
name = offlinebooks
version = 0.0.7
author = Ian2020
description = Keep your accounts offline
license = AGPL-3.0-or-later AND CC-BY-4.0 AND CC-BY-SA-4.0
license_files = LICENSES/*
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Ian2020/offlinebooks
project_urls =
    Source = https://github.com/Ian2020/offlinebooks
    Changelog = https://github.com/Ian2020/offlinebooks/tags
    Bug Tracker = https://github.com/Ian2020/offlinebooks/issues
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Topic :: Office/Business :: Financial :: Accounting
    Topic :: Utilities

[options]
packages = offlinebooks
include_package_data = True
zip_safe = False
install_requires =
  pyxero >= 0.9.3
  pathvalidate >= 2.5.0
  tenacity >= 8.0.1

[options.entry_points]
console_scripts =
  offlinebooks = offlinebooks.main:main
